# softposit-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  clippy.yml  rustfmt.yml
benches/: p32.rs
examples/: inverse.rs  poly.rs  quire.rs  sum.rs
src/: convert.rs  lib.rs  linalg.rs  macros.rs  p16.rs  p16e1.rs  p32.rs  p32e2.rs  p8.rs  p8e0.rs  polynom.rs  pxe1.rs  pxe2.rs  quire16.rs  quire32.rs  quire8.rs
src/p16/: convert.rs  math.rs  ops.rs
src/p16e1/: consts.rs  convert.rs  linalg.rs  math.rs  num.rs  ops.rs
src/p16e1/math/: acos_pi.rs  asin_pi.rs  atan_pi.rs  ceil.rs  cos_pi.rs  exp.rs  exp2.rs  floor.rs  ln.rs  log2.rs  mul_add.rs  round.rs  sin_pi.rs  sqrt.rs  tan_pi.rs
src/p32/: convert.rs  math.rs
src/p32e2/: consts.rs  convert.rs  linalg.rs  math.rs  num.rs  ops.rs
src/p32e2/math/: ceil.rs  floor.rs  mul_add.rs  round.rs  sleef.rs  sqrt.rs
src/p8/: convert.rs  math.rs  ops.rs
src/p8e0/: convert.rs  linalg.rs  math.rs  num.rs  ops.rs
src/p8e0/math/: ceil.rs  exp.rs  floor.rs  ln.rs  mul_add.rs  round.rs  sqrt.rs
src/pxe1/: convert.rs  math.rs  ops.rs
src/pxe2/: convert.rs  math.rs  ops.rs
src/quire16/: convert.rs  math.rs  ops.rs
src/quire32/: convert.rs  math.rs  ops.rs
src/quire8/: convert.rs  math.rs  ops.rs
