[package]
name = "softposit"
version = "0.2.0"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
description = "Implementation of Posit numbers"
repository = "https://gitlab.com/burrbull/softposit-rs"
keywords = ["posit", "unum"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies.num-traits]
version = "0.2"
optional = true

[dependencies.libm]
version = "0.1.2"
optional = true

[dependencies.nalgebra]
version = "0.18"
optional = true

[dependencies.alga]
version = "0.9"
optional = true

[dependencies.alga_derive]
version = "0.9"
optional = true

[dependencies.approx]
version = "0.3"
optional = true

[dependencies.rand]
version = "0.6"
optional = true

[features]
default = ["float_convert", "rand", "linalg"]
float_convert = ["libm"]
linalg = ["nalgebra", "num-traits", "alga", "approx", "alga_derive"]

