[package]
name = "softposit"
version = "0.3.0"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
description = "Implementation of Posit numbers"
repository = "https://gitlab.com/burrbull/softposit-rs"
keywords = ["posit", "unum"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies.num-traits]
version = "0.2"

[dependencies.nalgebra]
version = "0.18"
optional = true

[dependencies.alga]
version = "0.9"
optional = true

[dependencies.alga_derive]
version = "0.9"
optional = true

[dependencies.approx]
version = "0.3"
optional = true

[dependencies.rand]
version = "0.6"
optional = true

[dev-dependencies]
rand = "0.6"
criterion = "0.2"

[features]
default = []
std = []
linalg = ["nalgebra", "alga", "approx", "alga_derive"]
nightly = []

[[example]]
name = "inverse"
required-features = ["rand"]

[[bench]]
name = "p32"
harness = false
