[package]
name = "softposit"
version = "0.4.0"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
description = "Implementation of Posit numbers"
repository = "https://gitlab.com/burrbull/softposit-rs"
keywords = ["posit", "unum"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.61"

[dependencies.num-traits]
version = "0.2"

[dependencies.nalgebra]
version = "0.31"
optional = true
features = ["rand"]

[dependencies.simba]
version = "0.7"
optional = true

[dependencies.approx]
package = "approx"
version = "0.5"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[dev-dependencies]
rand = "0.8"
criterion = "0.4"

[features]
default = []
std = []
linalg = ["nalgebra", "simba", "approx"]

[[example]]
name = "inverse"
required-features = ["rand", "linalg"]

[[bench]]
name = "p32"
harness = false
